Keep successful checks expanded in applens search (#774)
Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/AngularApp/projects/applens/src/app/modules/dashboard/search-results/search-results.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/search-results/search-results.component.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div *ngIf="_searchService.searchIsEnabled" class="outer-container">
-    <detector-search [visibleLogging]="false" [showSearchBar]="false" [forceShowSearchPractices]="true"></detector-search>
+    <detector-search [visibleLogging]="false" [showSearchBar]="false" [forceShowSearchPractices]="true" [showSuccessfulChecks]="true"></detector-search>
   </div>
 </div>
