Using camel casing for onDowntimeChanged event

--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
@@ -1,6 +1,6 @@
 <div style="margin-left:20px">
   <comm-alert></comm-alert>
-  <detector-container [detector]="analysisId" [isAnalysisView]="true" (downTimeChanged)="ondownTimeChanged($event)"></detector-container>
+  <detector-container [detector]="analysisId" [isAnalysisView]="true" (downTimeChanged)="onDowntimeChanged($event)"></detector-container>
 </div>
 
 <detector-list-analysis #detectorListAnalysis detectorParmName="detector"></detector-list-analysis>
