--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
@@ -1,7 +1,7 @@
 <detector-control *ngIf="!hideDetectorControl && !hideTimerPicker && detectorResponse && !analysisMode"></detector-control>
 <div [ngStyle]="{'padding-top': hideTimerPicker? '10px': '0px'}" style="padding-left: 20px; padding-right: 20px"  >
   <detector-view [analysisMode]="analysisMode" [isAnalysisView]="isAnalysisView" [detectorResponse]="detectorResponse" [error]="error" [startTime]="getStartTime" [endTime]="getEndTime"
-   [developmentMode]="false" [detector]="detectorName" (downTimeChanged)="ondownTimeChanged($event)" (XAxisSelection)="onXAxisSelection($event)" [hideDetectorHeader]="hideDetectorControl"
+   [developmentMode]="false" [detector]="detectorName" (downTimeChanged)="onDowntimeChanged($event)" (XAxisSelection)="onXAxisSelection($event)" [hideDetectorHeader]="hideDetectorControl"
    [isCategoryOverview]="isCategoryOverview">
   </detector-view>
 </div>
