--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -48,10 +48,24 @@
     <hr>
   </div>
 
+  <div *ngIf="isAnalysisView && supportsDownTime" class="dynamic-data-container">
+    <div class="downtime-container">
+      <span class="downtime-icon"><i class="fa fa-filter fa-lg" aria-hidden="true"></i></span>
+        <label for="downtimeFilter"  tabindex="0"  aria-label="Select a downtime to investigate." role="text"><strong>Downtime</strong></label>
+        <fab-dropdown id="downtimeFilter" role="combobox" [options]="fabOptions" (onChange)="selectFabricKey($event)" [defaultSelectedKey]="selectedKey"
+          contentStyle="margin-top: -5px; margin-left: 5px;width:{{fabDropdownWidth}}px;min-width:336px">
+        </fab-dropdown>
+    </div>
+    <div *ngIf="downtimeSelectionErrorStr!=''" class="errorMessage"  attr.aria-label = "Error : {{downtimeSelectionErrorStr}}"  tabindex="0" role="text">
+      <strong>Error :</strong> {{downtimeSelectionErrorStr}}<span style='vertical-align:super'>*</span>
+    </div>
+  </div>
+ 
+
   <div *ngFor="let data of detectorDataLocalCopy.dataset  | renderfilter:isAnalysisView" class="dynamic-data-container">
     <dynamic-data [isAnalysisView]="isAnalysisView" [diagnosticData]="data" [startTime]="startTime" [endTime]="endTime"
       [detectorEventProperties]="detectorEventProperties" [developmentMode]="developmentMode" [executionScript]="script"
-      [detector]="detector" [compilationPackage]="compilationPackage"></dynamic-data>
+      [detector]="detector" [xAxisPlotBands]="xAxisPlotBands" [zoomBehavior] = "zoomBehavior" (XAxisSelection)="onXAxisSelection($event)" [compilationPackage]="compilationPackage"></dynamic-data>
   </div>
 </div>
 
@@ -59,9 +73,15 @@
   <markdown *ngIf="supportDocumentContent.length>0" #markdownDiv [data]="supportDocumentContent"></markdown>
 </data-container>
 
+<div *ngIf="isAnalysisView && supportsDownTime && downTimes.length > 0" class="dynamic-data-container" tabindex="0"  role="text" attr.aria-label ="Showing results from {{ getTimestampAsString(selectedDownTime.StartTime) }} to {{ getTimestampAsString(selectedDownTime.EndTime) }}">
+  <h2 aria-hidden="true">Showing results from {{ getTimestampAsString(selectedDownTime.StartTime) }} to {{ getTimestampAsString(selectedDownTime.EndTime) }}</h2>
+</div>
+
+
 <cxp-chat-launcher *ngIf="showChatButton()" [trackingId] = "cxpChatTrackingId" [chatUrl] = "cxpChatUrl" ></cxp-chat-launcher>
 <loader-view style="margin-top:300px" *ngIf="!detectorDataLocalCopy && !errorState"
   [message]="isCategoryOverview? 'Diagnosing ...' : 'Loading Detector...'"></loader-view>
+
 <ng-container *ngIf="!detectorDataLocalCopy && errorState">
   <span class="critical-color" *ngIf="errorState.error && !isPublic"> Error: {{errorState.error}}</span>
   <span class="critical-color" *ngIf="isPublic && errorState || !errorState.error">Sorry, an error occurred. Please
