Match the popout view with regular detectors view in AppLens. Show detector author and header info along with time picker.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="detectorDataLocalCopy">
-  <div *ngIf="!hideDetectorHeader && !analysisMode">
+  <div *ngIf="(!hideDetectorHeader && !analysisMode) || isPopoutFromAnalysis">
     <section class="content-header">
       <h2><span class="span-h1"
           *ngIf="!isSystemInvoker && !insideDetectorList">{{detectorDataLocalCopy.metadata.name}}</span></h2>
