--- a/AngularApp/projects/diagnostic-data/src/lib/components/dropdown-v4/dropdown-v4.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/dropdown-v4/dropdown-v4.component.html
@@ -11,7 +11,7 @@
     <div class="dropdown-container">
       <div class="dropdown">
         <button class="btn btn-default dropdown-toggle dropdown-button" type="button" id="dropdownMenuId"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <span [innerHtml]="selectedKey"></span>
           <span class="caret"></span>
         </button>
