Dynamic analysis case submission fix for downtime (#803)
* Update routing for dynamic analysis.

* Fix dynamic analysis

* Display detector name

Co-authored-by: nmallick1 <nmallick@microsoft.com>
Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -10,7 +10,7 @@
 
 <detector-list-analysis #detectorListAnalysis detectorParmName="detectorName" [resourceId]="resourceId" [targetedScore]="targetedScore" [analysisId]="analysisId" [searchTerm]="searchTerm" [searchMode]="searchMode" (onComplete)="updateLoadingStatus($event)"></detector-list-analysis>
 
-<div  *ngIf="searchMode !== SearchAnalysisMode.Genie" >
+<div  *ngIf="searchMode !== SearchAnalysisMode.Genie && detectorListAnalysis.inDrillDownMode" >
   <router-outlet></router-outlet>
 </div>
 
