Luminosity ratio for text inside insight (#811)

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/connection-diagnoser-tool/connection-diagnoser-tool.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/connection-diagnoser-tool/connection-diagnoser-tool.component.html
@@ -85,7 +85,7 @@
                                     Status
                                 </th>
                                 <td tabindex="0">
-                                    <div *ngIf="connection.Succeeded" style="color:rgb(19, 140, 57)">
+                                    <div *ngIf="connection.Succeeded" style="color:#137c39">
                                         <strong>We could connect successfully to this connection.</strong>
                                     </div>
                                     <div *ngIf="!connection.Succeeded">
