Fix contrast ratio for chat bubble close button on hover.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.scss
@@ -153,6 +153,7 @@ hr {
 .cxpChat-ChangeIcon:hover > .fa + .fa {
   display: inherit;
   color: #ba141a;
+  background-color: white;
   margin-top: 5px;
   margin-right: 0px;
 }
