Add text for empty table, enable pre-populated search result (#867)
* Change height when table is empty

* Enable pre-populated search results

* Dynamic setting table height, add text for empty

* Add tabindex

* fix auto blur when type one letter

--- a/AngularApp/projects/diagnostic-data/src/lib/components/data-table-v4/data-table-v4.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/data-table-v4/data-table-v4.component.html
@@ -23,3 +23,9 @@
     <pre class="description-text">{{ selectionText }}</pre>
   </div>
 </data-container>
+
+<ng-template #emptyTableFooter>
+  <div tabindex="0" class="table-footer">
+    <p>No Data to Display</p>
+  </div>
+</ng-template>
