Read search results on Narrator (#873)
Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.html
@@ -5,7 +5,7 @@
     </div>
     <div style="margin-left:20px;">
         <div class="input-group input-group-sm search-input-group" *ngIf="!searchConfiguration.DetectorSearchEnabled || detectorId == ''">
-            <input aria-controls="search-results" class="form-control search-result-input" [(ngModel)]="searchTerm" tabindex="0" type="search" placeholder="Describe your problem here" (keyup.enter)="hitSearch()" maxlength="140" onChange="resetAlert()" #searchInputBox>
+            <input aria-controls="search-results" class="form-control search-result-input" [(ngModel)]="searchTerm" tabindex="0" type="search" placeholder="Describe your problem here" (keyup.enter)="hitSearch()" maxlength="140" (ngModelChange)="resetAlert()" #searchInputBox>
             <div class="input-group-btn" id="clear-search">
                 <button aria-label="Please provide at least 2 characters"
                 title="Please provide at least 2 characters"
@@ -22,7 +22,7 @@
         <p #charAlertRef *ngIf="showCharAlert" tabindex="0">Please provide at least 2 characters</p>
     </div>
 </div>
-<div style="margin-left:20px;" *ngIf="searchConfiguration.DetectorSearchEnabled" #searchResultsSection>
+<div style="margin-left:20px;" *ngIf="searchConfiguration.DetectorSearchEnabled" tabindex="0" #searchResultsSection>
     <div [hidden]="detectorId === ''">
     <div>
         <div style="display: inline-block;margin-top: 10px">
