--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.scss
@@ -87,10 +87,10 @@
 }
 
 .span-h1{
-    font-size: 1.8rem;
-    font-weight: 400;
+    font-size: 1.6rem;
+    font-weight: 640;
     display: block;
-    color: #015cda;
+    color: #000000;
 }
 
 .shown {
