--- a/AngularApp/projects/diagnostic-data/src/lib/components/form/form.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/form/form.component.scss
@@ -16,6 +16,7 @@
 .form-tooltiptext {
     visibility: hidden;
     background: #2d2d2d;
+    margin-left: 5px;
   }
 
   .fa-info-circle:hover .form-tooltiptext{
