--- a/AngularApp/projects/diagnostic-data/src/lib/components/form/form.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/form/form.component.html
@@ -6,8 +6,10 @@
     <ng-template ngFor let-formInput [ngForOf]="element.formInputs">
       <div class="form-group row" *ngIf="isText(formInput.inputType)">
         <div class="col-sm-8">
-          <label class="col-sm-4 col-md-4 col-form-label"> {{formInput.inputLabel}}
-            <span class="fa form-tooltip fa-info-circle" *ngIf="formInput.tooltip != ''"> <span class="form-tooltiptext"> {{formInput.tooltip}} </span> </span>
+          <label class="col-sm-4 col-md-2 col-form-label"> {{formInput.inputLabel}}
+            <fab-tooltip-host  *ngIf="formInput.tooltip != ''" [content]="formInput.tooltip" [directionalHint]="directionalHint">
+              <span class="fa form-tooltip fa-info-circle"></span>
+            </fab-tooltip-host>
           </label>
           <div class="col-sm-8 col-md-6">
             <input type="text" class="form-control" [id]=formInput.internalId [(ngModel)]="formInput.inputValue"
@@ -20,14 +22,21 @@
       </div>
       <div class="form-group row" *ngIf="isRadioButtonList(formInput.inputType)">
         <div class="col-sm-8">
-          <label class="col-sm-4 col-md-4 col-form-label" [class.col-md-4]="formInput.tooltip != ''" [class.col-md-2]="formInput.tooltip == ''"> {{formInput.inputLabel}}
-          <span class="fa form-tooltip fa-info-circle" style="display: inline;" *ngIf="formInput.tooltip != ''" > <span class="form-tooltiptext"> {{formInput.tooltip}}  </span></span>
+          <label class="col-sm-4 col-md-2 col-form-label" [class.col-md-4]="formInput.tooltip != ''" [class.col-md-2]="formInput.tooltip == ''"> {{formInput.inputLabel}}
+            <fab-tooltip-host  *ngIf="formInput.tooltip != ''" [content]="formInput.tooltip" [directionalHint]="directionalHint">
+              <span class="fa form-tooltip fa-info-circle" style="display: inline;"></span>
+            </fab-tooltip-host>
           </label>
           <div class="col-sm-8 col-md-6">
             <ng-container *ngFor="let entry of formInput.items">
               <div class="radio">
                 <label><input type="radio" [name]=formInput.internalId [(ngModel)]="formInput.inputValue"
-                    [value]="entry.value">{{ entry.text }}   <span class="fa form-tooltip fa-info-circle" *ngIf="entry.tooltip != ''"> <span class="form-tooltiptext"> {{entry.tooltip}}  </span></span> </label>
+                    [value]="entry.value">{{ entry.text }}
+                    <fab-tooltip-host *ngIf="entry.tooltip != ''" [content]="entry.tooltip" [directionalHint]="directionalHint">
+                      <span class="fa form-tooltip fa-info-circle" >
+                      </span>
+                    </fab-tooltip-host>
+                    </label>
               </div>
             </ng-container>
           </div>
