--- a/AngularApp/projects/diagnostic-data/src/lib/components/network-graph/network-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/network-graph/network-graph.component.html
@@ -1,3 +1,18 @@
-<p>
-  network-graph works!
-</p>
+<!-- <div class="boxChart__container">
+  <div>
+    <highcharts-chart
+      [Highcharts]="Highcharts"
+      [options]="chartOptions"
+      style="width: 100%; display: block;" >
+    </highcharts-chart>
+  </div>
+</div> -->
+
+<div class="container">
+    <div id="appservicearch" style="width:100%; height:400px;"></div>
+</div>
+
+
+<div class="container">
+  <div id="barChart" style="width:100%; height:400px;"></div>
+</div>
