More results button to convey to user about scrolling down (#890)
* Read search results on Narrator

* More results button to convey to user about scrolling down

* rendering results early

* Using fabric button

Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-summary/category-summary.component.html
@@ -4,7 +4,7 @@
     <section *ngIf="category" class="sidebar" id="sidebar">
       <category-nav></category-nav>
     </section>
-    <section [ngClass]="{'content' : category,'content-hide-nav' : !category}">
+    <section [ngClass]="{'content' : category,'content-hide-nav' : !category}" class="mainContentSection">
       <div class="col-md col-ms col-lg" style="width:98%; display: inline-block;">
         <detector-command-bar (openPanel)="setFocusOnCallpsibleButton()"></detector-command-bar>
         <router-outlet></router-outlet>
