--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -266,7 +266,7 @@
     </div>
   </div>
 
-  <div *ngIf="!isDynamicAnalysis && isSearchEmbedded && getPendingDetectorCount() === 0" style="margin-left:30px;">
+  <div *ngIf="!isDynamicAnalysis && isSearchEmbedded" style="margin-left:30px;">
     <detector-search [detector]="analysisId" [diagnosticData]="searchDiagnosticData"></detector-search>
   </div>
   <div *ngIf="isDynamicAnalysis && ((!showPreLoader && getPendingDetectorCount() === 0) || showWebSearch)"
