--- a/AngularApp/projects/diagnostic-data/src/lib/components/network-graph/network-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/network-graph/network-graph.component.html
@@ -1,5 +1,2 @@
-
-<highcharts-chart  [Highcharts]="Highcharts" [options]="chartOptions" >
-</highcharts-chart>
-
-
+<p>helloworld</p>
+<div id="paper" style="margin: 0 auto;"></div>
