SequenceDiagram class implemented

--- a/AngularApp/projects/diagnostic-data/src/lib/components/network-graph/network-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/network-graph/network-graph.component.html
@@ -1,2 +1,2 @@
-<p>helloworld</p>
+<p>network-graph.component.html template is working</p>
 <div id="network-graph-paper" style="margin: 0 auto;"></div>
