--- a/AngularApp/projects/diagnostic-data/src/lib/components/network-graph/network-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/network-graph/network-graph.component.html
@@ -1,1 +1,3 @@
-<div id="network-graph-paper" style="margin: 0 auto;"></div>
+<div id="network-graph">
+    <div id="network-graph-paper"></div>
+</div>
