Add dropdowns to forms (#916)
* temp commit

* Display dropdown in UI

* Set defaultkeys, componentRef to get selectedOptions

* set dropdown input value

* Set query param values for dropdown

* Set query param values for dropdown

* Update form.component.ts

* Set visibility based on children

* Add only visible dropdowns to query string

* Add visiblity flag to radio button and textbox

--- a/AngularApp/projects/diagnostic-data/src/lib/components/form/form.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/form/form.component.html
@@ -4,7 +4,7 @@
     <h3 class="form-title">{{element.formTitle}}</h3>
     <!-- Display form inputs-->
     <ng-template ngFor let-formInput [ngForOf]="element.formInputs">
-      <div class="form-group row" *ngIf="isText(formInput.inputType)">
+      <div class="form-group row" *ngIf="isText(formInput.inputType) && formInput.isVisible">
         <div class="col-sm-8">
           <label class="col-sm-4 col-md-2 col-form-label"> {{formInput.inputLabel}}
             <fab-tooltip-host  *ngIf="formInput.tooltip != ''" [content]="formInput.tooltip" [directionalHint]="directionalHint">
@@ -20,7 +20,7 @@
 
         </div>
       </div>
-      <div class="form-group row" *ngIf="isRadioButtonList(formInput.inputType)">
+      <div class="form-group row" *ngIf="isRadioButtonList(formInput.inputType) && formInput.isVisible">
         <div class="col-sm-8">
           <label class="col-sm-4 col-md-2 col-form-label" [class.col-md-4]="formInput.tooltip != ''" [class.col-md-2]="formInput.tooltip == ''"> {{formInput.inputLabel}}
             <fab-tooltip-host  *ngIf="formInput.tooltip != ''" [content]="formInput.tooltip" [directionalHint]="directionalHint">
@@ -39,6 +39,23 @@
                     </label>
               </div>
             </ng-container>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group row" *ngIf="isDropdown(formInput.inputType) && formInput.isVisible">
+        <div class="col-sm-8">
+          <label class="col-sm-4 col-md-2 col-form-label" [class.col-md-4]="formInput.tooltip != ''" [class.col-md-2]="formInput.tooltip == ''"> {{formInput.inputLabel}}
+            <fab-tooltip-host  *ngIf="formInput.tooltip != ''" [content]="formInput.tooltip" [directionalHint]="directionalHint">
+              <span class="fa form-tooltip" [ngClass]="formInput.tooltipIcon" style="display: inline;"></span>
+            </fab-tooltip-host>
+          </label>
+          <div class="col-sm-8 col-md-6">
+            <fab-dropdown [id]="formInput.internalId" role="combobox" [options]="formInput.dropdownOptions"
+              [multiSelect]="formInput.isMultiSelect" [defaultSelectedKey]="formInput.defaultSelectedKey"
+              (onChange)=setDropdownSelection($event) [defaultSelectedKeys]="formInput.defaultSelectedKeys"
+               #formDropdown [componentRef]="formdropDownRef">
+            </fab-dropdown>
           </div>
         </div>
       </div>
