Smooth scroll behavior on more results click (#919)
* Smooth scroll behavior on more results click

* Smooth scroll behavior on more results click

* Scroll smooth

* Default searchId

Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.html
@@ -15,7 +15,7 @@
     </div>
   </ng-container>
 
-  <div id="app-content" [ngClass]="{'panel-body-withtab':isLegacy, 'panel-body-notab':!isLegacy}" class="panel-body">
+  <div id="app-content" [ngClass]="{'panel-body-withtab':isLegacy, 'panel-body-notab':!isLegacy}" class="panel-body" style="scroll-behavior: smooth;">
     <notification></notification>
     <div class="tab-content container-fluid" [ngClass]="{'panel-body-nopadding':!isLegacy, 'panel-body-padding':isLegacy}">
       <ng-content></ng-content>
