Introducing new component - Deep Search to show relevant internal documents in addition to results from Web (#914)
* Introducing a new Component : Deep Search

* Added numArticlesExpanded input to websearch component

* Removed console log statements and updated App Setting isEnabled for Deep Search

* Small styling improvements

* fixing the height of deep-search article div + updated web-search : not collapsed when deep-search is disabled

* changed height to max-height ; updated catchError block of web-search component ; moved checkIfDeepSearchEnabled method to constructor

* Loader shall not be needed

Co-authored-by: Vijay Saayi R <visaayir@microsoft.com>
Co-authored-by: Ajay Sharma <ajsharm@microsoft.com>

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.html
@@ -168,7 +168,21 @@
     </div>
 </div>
 <div style="margin-left:20px;margin-top:20px;" *ngIf="searchConfiguration.WebSearchEnabled">
-    <web-search [searchTerm]="searchTerm" [searchId]="searchId" [isChildComponent]="true" [(searchResults)]="webSearchResults" [webSearchConfig]="searchConfiguration.WebSearchConfiguration"></web-search>
+    <web-search [searchTerm]="searchTerm"
+                [searchId]="searchId" 
+                [isChildComponent]="true" 
+                [(searchResults)]="webSearchResults" 
+                [webSearchConfig]="searchConfiguration.WebSearchConfiguration"
+                [numArticlesExpanded] = 2>
+    </web-search>
+</div>
+
+<div style="margin-left:20px;margin-top:20px;" *ngIf="searchConfiguration.WebSearchEnabled">
+    <documents-search   [searchTerm]="searchTerm"
+                        [searchId] = "searchId"
+                        [isChildComponent]="true"
+                        [numDocumentsExpanded] = 2>
+    </documents-search>
 </div>
 <div *ngIf="isPublic && showScrollButton && (detectors.length>0 || !(!webSearchResults || webSearchResults.length==0))" class="more-results-button">
     <fab-primary-button
