--- a/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.html
@@ -24,16 +24,32 @@
             <li>Try more general keywords.</li>
         </ul>
     </div>
+
     <div *ngIf="searchResults && searchResults.length>0">
         <div class="article-container">
           <div class="article-heading" tabindex="0">Here are some documents from the web that might help you</div>
-          <div class="article" *ngFor="let article of searchResults" (click)="selectResult(article)" tabindex="0" (keyup.enter)="selectResult(article)" >
-            <a>{{article.title}}
-              <i class="fa fa-external-link"></i>
-            </a>
-            <div class="article-link">{{getLinkText(article.link)}}</div>
-            {{article.description}}
+          <div *ngFor="let article of searchResults;let i =index" >
+            <!--if deepSearchEnabled = false, hidden = false -->
+            <div  [hidden]="( !deepSearchEnabled || i < numArticlesExpanded ) ? false : !viewRemainingArticles" 
+                class="article" 
+                (click)="selectResult(article)" 
+                tabindex="0" 
+                (keyup.enter)="selectResult(article)" >
+                <a>{{article.title}}
+                <i class="fa fa-external-link"></i>
+                </a>
+                <div class="article-link">{{getLinkText(article.link)}}</div>
+                {{article.description}}
+            </div>
           </div>
+
+          <!--Anchor tag should be displayed only if deep search is enabled-->
+          <a  *ngIf="deepSearchEnabled"
+                (click)="showRemainingArticles()"> 
+                {{viewOrHideAnchorTagText(viewRemainingArticles , searchResults.length , numArticlesExpanded )}}   
+          </a>
+    
         </div>
+          
     </div>
 </div>
