--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -271,7 +271,20 @@
   </div>
   <div *ngIf="isDynamicAnalysis && ((!showPreLoader && getPendingDetectorCount() === 0) || showWebSearch)"
     style="margin-left:80px;margin-top:20px;">
-    <web-search [searchTerm]="searchTerm" [searchId]="searchId" [isChildComponent]="true"></web-search>
+    <web-search [searchTerm]="searchTerm" 
+                [searchId]="searchId" 
+                [isChildComponent]="true"
+                [numArticlesExpanded] = 2>
+    </web-search>
+  </div>
+
+  <div *ngIf="isDynamicAnalysis && ((!showPreLoader && getPendingDetectorCount() === 0) || showWebSearch)"
+    style="margin-left:80px;margin-top:20px;">
+    <documents-search   [searchTerm]="searchTerm"
+                        [searchId] = "searchId"
+                        [isChildComponent]="true"
+                        [numDocumentsExpanded] = 2>
+    </documents-search>
   </div>
 
   <div class="list-wrapper" *ngIf="supportDocumentRendered">
