--- a/AngularApp/projects/diagnostic-data/src/lib/components/documents-search/documents-search.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/documents-search/documents-search.component.scss
@@ -25,6 +25,10 @@
     display:block;
     font-size: 14px;
 }
+a{
+    cursor: pointer;
+}
+
 
 .form-control{
     font-size: 16px;
@@ -41,10 +45,12 @@
     padding: 10px;
     background-color: white;
     margin: 10px 0px;
+    max-height: 120px;        
 }
 
 .article > h5 {
     color: blue;
+    
 }
 
 .article-link {
@@ -57,6 +63,6 @@
     margin-bottom:5px;
 }
 
-a{
-    cursor: pointer;
+label {
+    margin-left: 6px;
 }
