--- a/AngularApp/projects/diagnostic-data/src/lib/components/insights-v4/insights-v4.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/insights-v4/insights-v4.component.html
@@ -19,7 +19,7 @@
               <div style="display: table-cell;width:100%">
                 {{insight.title}}
               </div>
-              <div [hidden]="!hasContent(insight)" style="display: table-cell" class="pull-right">
+              <div *ngIf="hasContent(insight)" style="display: table-cell" class="pull-right">
                 <span tabindex="0" class="fa insight-expand-icon" [class.fa-angle-right]="hasContent(insight) && !insight.isExpanded"
                   [class.fa-angle-down]="hasContent(insight) && insight.isExpanded"></span>
               </div>
