--- a/AngularApp/projects/diagnostic-data/src/lib/components/documents-search/documents-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/documents-search/documents-search.component.html
@@ -32,7 +32,7 @@
               [hidden]="(!isPublic || i < numDocumentsExpanded ) ? false : !viewRemainingDocuments" 
               (click)="selectResult(document)" tabindex="0" 
               (keyup.enter)="selectResult(document)" >
-          <a>{{ limitTextCharacters(document.title, 100 )}}
+          <a style="font-weight: 600;">{{ limitTextCharacters(document.title, 100 )}}
             <i class="fa fa-external-link"></i>
           </a>
           <div class="article-link">{{getLinkText(document.url)}}  </div>
