--- a/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/web-search/web-search.component.html
@@ -30,12 +30,12 @@
           <div class="article-heading" tabindex="0">Here are some documents from the web that might help you</div>
           <div *ngFor="let article of searchResults;let i =index" >
             <!--if deepSearchEnabled = false, hidden = false -->
-            <div  [hidden]="( !deepSearchEnabled || i < numArticlesExpanded ) ? false : !viewRemainingArticles" 
+            <div  [hidden]="(i < numArticlesExpanded ) ? false : !viewRemainingArticles" 
                 class="article" 
                 (click)="selectResult(article)" 
                 tabindex="0" 
                 (keyup.enter)="selectResult(article)" >
-                <a>{{article.title}}
+                <a style="font-weight:600;">{{article.title}}
                 <i class="fa fa-external-link"></i>
                 </a>
                 <div class="article-link">{{getLinkText(article.link)}}</div>
@@ -44,7 +44,7 @@
           </div>
 
           <!--Anchor tag should be displayed only if deep search is enabled-->
-          <a  *ngIf="deepSearchEnabled"
+          <a  *ngIf="searchResults.length>numArticlesExpanded"
                 (click)="showRemainingArticles()"> 
                 {{viewOrHideAnchorTagText(viewRemainingArticles , searchResults.length , numArticlesExpanded )}}   
           </a>
