Add a time delay of 40 seconds before chat bubble is shown. Also adjust logging accordingly.

--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -44,7 +44,7 @@
 
   <div *ngIf="showChatConfDialog" class="arrow-bottom"></div>
 
-  <div class='chatBubble' (click)="toggleChatConfDialog()">
+  <div class='chatBubble' *ngIf="showChatBubble" (click)="toggleChatConfDialog()">
     <i class="fa fa-comments chatIcon" aria-hidden="true"></i>
   </div>
 </div>
