Add detector loading animation before detector loaded (#939)
* Add detector view loader component

* Add random time wait logic into detector loader component

* Fix string and use fabric spinner for loading

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -89,8 +89,7 @@
 
 <cxp-chat-launcher *ngIf="showChatButton()" [trackingId]="cxpChatTrackingId" [chatUrl]="cxpChatUrl"
   [supportTopicId]="supportTopicId"></cxp-chat-launcher>
-<loader-view style="margin-top:300px" *ngIf="!detectorDataLocalCopy && !errorState"
-  [message]="isCategoryOverview? 'Diagnosing ...' : 'Loading Detector...'"></loader-view>
+  <loader-detector-view style="margin-top:300px" *ngIf="!detectorDataLocalCopy && !errorState"></loader-detector-view>
 
 <ng-container *ngIf="!detectorDataLocalCopy && errorState">
   <span class="critical-color" *ngIf="errorState.error && !isPublic"> Error: {{errorState.error}}</span>
