--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-detector/generic-detector.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-detector/generic-detector.component.html
@@ -1,3 +1,5 @@
+<blade-closing-notification></blade-closing-notification>
+<reliablity-checks-notification></reliablity-checks-notification>
 <div [ngClass]="{'detector-padding': analysisMode === false}">
     <detector-container [analysisMode]="analysisMode" [detector]="detector"></detector-container>
 </div>
