--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/blade-closing-notification/blade-closing-notification.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/blade-closing-notification/blade-closing-notification.component.html
@@ -1,3 +1,3 @@
-<fab-message-bar [messageBarType]="type" isMultiline="false" dismissButtonAriaLabel="Close" [truncated]="true"
+<fab-message-bar [messageBarType]="type" isMultiline="false" dismissButtonAriaLabel="Close" [truncated]="true" [styles]="styles"
   overflowButtonAriaLabel="See more">To continue with case submission, please click on the "X" in the upper right corner.</fab-message-bar>
 <div style="margin-bottom: 5px;"></div>
