--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/reliablity-checks-notification/reliablity-checks-notification.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/reliablity-checks-notification/reliablity-checks-notification.component.html
@@ -1,2 +1,2 @@
 <fab-message-bar [messageBarType]="type" dismissable="true" isMultiline="false" dismissButtonAriaLabel="Close" [truncated]="true" [styles]="styles"
-  overflowButtonAriaLabel="See more">You have at least {{criticalCount}} critical recommendations about your app's configurations. Please check more about <a (click)="openReliabilityChecksPanel()">reliability checks</a></fab-message-bar>
+  overflowButtonAriaLabel="See more">We detected missing configurations that will increase risk of a downtime. Please check <a (click)="openReliabilityChecksPanel()">Availability risk alerts</a>.</fab-message-bar>
