rename related componentsj

--- a/AngularApp/projects/app-service-diagnostics/src/app/app.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/app.component.html
@@ -2,5 +2,5 @@
     <generic-comms></generic-comms>
     <router-outlet></router-outlet>
     <genie-panel></genie-panel>
-    <reliability-checks-panel></reliability-checks-panel>
+    <risk-alerts-panel></risk-alerts-panel>
 </tabs>
