--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-panel/risk-alerts-panel.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-panel/risk-alerts-panel.component.html
@@ -1,4 +1,4 @@
-<fab-panel [isOpen]="globals.openReliabilityChecksPanel" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true"
+<fab-panel [isOpen]="globals.openRiskAlertsPanel" [type]="type" [customWidth]="width" [isHiddenOnDismiss]="true" [styles]="styles"
   [isLightDismiss]="true" [hasCloseButton]="true" [closeButtonAriaLabel]="'close'" (onDismissed)="dismissedHandler()">
   <div>
     <div class="row">
